update the website

--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Lato:wght@300&family=Poppins:wght@100;200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="aboutMe.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/aboutMe.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
     <title>About Me</title>
 </head>
 <body>
@@ -26,11 +26,13 @@
             <li><a href="about.html">About Me</a></li>
             <li><a href="education.html">Academic Information</a></li>
             <li><a href="interest.html">Interest</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <section class="cover_photo another">
-            <h1>About Me</h1>
+        <div id="xyz">
+            <h1 class="heading-line">About Me</h1>
+        </div>
     </section>
     <section>
         <div class="about">
@@ -43,14 +45,11 @@
                 <br>
                 Thank you for visiting my website, and I hope you find it informative and inspiring.
                 <br>
-                <br>
                 Best regards,
                 <br>
-                <br>
-                Ahasan Habib(213-15-4284)
-                <br>
-                <br>
-                Dept. of CSE, Daffodil International University.</p>
+                Ahasan Habib(213-15-4284) <br>
+                Department of CSE, <br>
+                Daffodil International University.</p>
             </div>
         </div>
     </section>
