--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Lato:wght@300&family=Poppins:wght@100;200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/responsive.css">
     <title>Moblie Screen Responsive</title>
 </head>
 <body>
@@ -24,12 +24,14 @@
             <li><a href="index.html" class="home">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="education.html">Academic Information</a></li>
-            <li><a href="interest.html">Interest</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="interest.html"p[p9]>Interest</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <section class="cover_photo">
-            <h1>Welcome to my WebSite</h1>
+        <div id="xyz">
+            <h1 class="heading-line">Welcome to my WebSite</h1>
+        </div>
     </section>
     <section class="divition">
         <div class="picture">
@@ -42,11 +44,11 @@
         </div>
         <div class="picture">
             <img src="Images/Interest.jpg" alt="Ahasan Habib Photo">
-            <a href="#"><h1>Interest</h1></a>
+            <a href="interest.html"><h1>Interest</h1></a>
         </div>
         <div class="picture">
             <img src="Images/contact.jpg" alt="Ahasan Habib Photo">
-            <a href="#"><h1>Contact</h1></a>
+            <a href="contact.html"><h1>Contact</h1></a>
         </div>
     </section>
     <footer>
