--- a/interest.html
+++ b/interest.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Lato:wght@300&family=Poppins:wght@100;200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="interestes.css">
-    <link rel="stylesheet" href="responsive.css">
-    <title>About Me</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/interestes.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
+    <title>Interest</title>
 </head>
 <body>
     <nav>
@@ -26,11 +26,13 @@
             <li><a href="about.html">About Me</a></li>
             <li><a href="education.html">Academic Information</a></li>
             <li><a href="interest.html">Interest</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <section class="cover_photo interested">
-            <h1>Interest</h1>
+    <section class="cover_photo">
+        <div id="xyz">
+            <h1 class="heading-line">Interest</h1>
+        </div>
     </section>
     <section class="part">
         <div class="part_pic">
