--- a/education.html
+++ b/education.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Lato:wght@300&family=Poppins:wght@100;200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="educations.css">
-    <link rel="stylesheet" href="responsive.css">
-    <title>About Me</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/educations.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
+    <title>Education</title>
 </head>
 <body>
     <nav>
@@ -26,11 +26,13 @@
             <li><a href="about.html">About Me</a></li>
             <li><a href="education.html">Academic Information</a></li>
             <li><a href="interest.html">Interest</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <section class="cover_photo edu">
-            <h1>Academic Information</h1>
+    <section class="cover_photo">
+        <div id="xyz">
+            <h1 class="heading-line">Academic Information</h1>
+        </div>
     </section>
     <section>
         <div class="institution">
@@ -58,7 +60,7 @@
                 <img src="Images/daffodil.png" alt="HSC School">
                 <div class="name_text">
                     <h1>B.Sc in CSE(Ongoing)</h1>
-                    <p> I am currently in my fifth semester in the CSE department at Daffodil International University. I have started my journey from fall 2021 semester and Insha'Allah, I will complete my B.Sc in June 2025.  </p>
+                    <p> I am currently in my fifth semester in the CSE department at Daffodil International University. I have started my journey from fall 2021 semester and Insha'Allah, I will complete my B.Sc in June 2025.Average CGPA 3.52</p>
                 </div>
             </div>
         </div>
