I am updating this project step by step

--- a/education.html
+++ b/education.html
@@ -24,14 +24,14 @@
         <ul>
             <li><a href="index.html" class="home">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <li><a href="education.html">Academic Information</a></li>
+            <li><a href="education.html">Academic Info</a></li>
             <li><a href="interest.html">Interest</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <section class="cover_photo">
         <div id="xyz">
-            <h1 class="heading-line">Academic Information</h1>
+            <h1 class="heading-line">Academic Info</h1>
         </div>
     </section>
     <section>
@@ -41,17 +41,15 @@
                 <div class="name_text">
                     <h1>S.S.C</h1>
                     <p>I have completed my secondary School Certificate exam from <br> Mirzagonj M.L High School in 2017.
-                        <br>
-                        <br>
-                       I have obtained GPA  4.73(A) out of 5.</p>
+                    </p>
+                    <p>I have obtained GPA  4.73(A) out of 5.</p>
                 </div>
             </div>
-            <div class="ssc extra">
+            <div class="ssc">
                 <img src="Images/hsc.png" alt="SSC School">
                 <div class="name_text">
                     <h1>H.S.C</h1>
                     <p>I have completed my higher secondary school certificate from <br> Biam Model School and College Rangpur in 2019.
-                        <br>
                         <br>
                         I have obtained GPA 4.92(A) out of 5.</p>
                 </div>
@@ -60,7 +58,7 @@
                 <img src="Images/daffodil.png" alt="HSC School">
                 <div class="name_text">
                     <h1>B.Sc in CSE(Ongoing)</h1>
-                    <p> I am currently in my fifth semester in the CSE department at Daffodil International University. I have started my journey from fall 2021 semester and Insha'Allah, I will complete my B.Sc in June 2025.Average CGPA 3.52</p>
+                    <p> I am currently in my seven semester in the CSE department at Daffodil International University. I have started my journey from fall 2021 semester and Insha'Allah, I will complete my B.Sc in June 2025.Average CGPA 3.52</p>
                 </div>
             </div>
         </div>
