--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
             <li><a href="index.html" class="home">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <li><a href="education.html">Academic Information</a></li>
+            <li><a href="education.html">Academic Info</a></li>
             <li><a href="interest.html"p[p9]>Interest</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
