--- a/interest.html
+++ b/interest.html
@@ -24,7 +24,7 @@
         <ul>
             <li><a href="index.html" class="home">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <li><a href="education.html">Academic Information</a></li>
+            <li><a href="education.html">Academic Info</a></li>
             <li><a href="interest.html">Interest</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -46,6 +46,10 @@
         <div class="part_pic">
             <img src="Images/traveling.jpg" alt="traveling">
             <h1>Travelling</h1>
+        </div>
+        <div class="part_pic">
+            <img src="Images/criket.webp" alt="traveling">
+            <h1>Playing</h1>
         </div>
     </section>
     <footer class="foter">
