--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <ul>
             <li><a href="index.html" class="home">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <li><a href="education.html">Academic Information</a></li>
+            <li><a href="education.html">Academic Info</a></li>
             <li><a href="interest.html">Interest</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
