--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/contact.css">
-    <!-- <link rel="stylesheet" href="CSS/responsive.css"> -->
+    <link rel="stylesheet" href="CSS/responsive.css">
     <title>Contact</title>
 </head>
 <body>
@@ -35,15 +35,15 @@
         </div>
     </section>
     <section class="contact-info">
-        <div class="contact-details">
+        <div class="contact-details current-address">
             <div class="contact-headline">
                 <h1>Current Address</h1>
             </div>
             <ul class="contact-platform">
-                <li>Name: Ahasan Habib</li>
-                <li>Education: CSE Dept in Daffodil International University</li>
-                <li>Parmanet addrss: Jarabari, Domar, Nilphamari</li>
-                <li>Current address: Dattapara, Birulia, Savar, Dhaka</li>
+                <li><span>Name:</span> Ahasan Habib</li>
+                <li><span>Education:</span> CSE Dept in Daffodil International University</li>
+                <li><span>Parmanet addrss:</span> Jarabari, Domar, Nilphamari</li>
+                <li><span>Current address:</span> Dattapara, Birulia, Savar, Dhaka</li>
             </ul>
         </div>
         <div class="contact-details">
@@ -51,9 +51,9 @@
                 <h1>Contact Details</h1>
             </div>
             <ul class="contact-platform">
-                <li>Personal Email: <a href="mailto:ahasanhabib2912@gmail.com">ahasanhabib2912@gmail.com</a></li>
-                <li>University Email: <a href="mailto:ahasanhabib2912@gmail.com">habib15-4284@diu.edu.bd</a></li>
-                <li>Mobile: 01796905988  or 01571324191</li>
+                <li><span>Personal Email:</span> <a href="mailto:ahasanhabib2912@gmail.com">ahasanhabib2912@gmail.com</a></li>
+                <li><span>University Email:</span> <a href="mailto:ahasanhabib2912@gmail.com">habib15-4284@diu.edu.bd</a></li>
+                <li><span>Mobile:</span> 01796905988  or 01571324191</li>
             </ul>
             <ul class="contact-online">
                 <li><a href="https://www.facebook.com/mdahashanhabib.siam/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
